--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-logging.level.club.banyuan=debug
-logging.level.org.springframework=debug
-logging.level.org.mybatis=debug
+#logging.level.club.banyuan=debug
+#logging.level.org.springframework=debug
+#logging.level.org.mybatis=debug
 # for thymeleaf
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.encoding=UTF-8
 # for datasource
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/banyuan?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/blog?serverTimezone=UTC
+#blog为数据库库名
 spring.datasource.username=root
-spring.datasource.password=asdf1234
+spring.datasource.password=12345678
 # for mybatis
-mybatis.config-location=classpath:config/mybatis.xml
-mybatis.mapper-locations=classpath:dao/*.xml
+#mybatis.config-location=classpath:config/mybatis.xml
+#mybatis.mapper-locations=classpath:dao/*.xml
