--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/blog?serverTimez
 spring.datasource.username=root
 spring.datasource.password=12345678
 # for mybatis
-#mybatis.config-location=classpath:config/mybatis.xml
-#mybatis.mapper-locations=classpath:dao/*.xml
+mybatis.config-location=classpath:config/mybatis.xml
+mybatis.mapper-locations=classpath:dao/*.xml
